--- a/appointment/src/main/resources/application.properties
+++ b/appointment/src/main/resources/application.properties
@@ -5,3 +5,10 @@ spring.jpa.properties.hibernate.format_sql=true
 # 显示绑定参数值
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE 
+# 自动更新表结构
+spring.jpa.hibernate.ddl-auto=update
+
+# 时区配置
+spring.jackson.time-zone=Asia/Shanghai
+spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Shanghai
+spring.jpa.properties.hibernate.properties.hibernate.jdbc.time_zone=Asia/Shanghai
